[package]
name = "polymerium"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.71"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "polymerium_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }
window-vibrancy = "0.5"
tauri-plugin-devtools = "2.0.0-rc"
specta = "2.0.0-rc"
specta-typescript = "0.0.7"
tauri-specta = { version = "2.0.0-rc", features = ["derive", "typescript"] }
tauri-plugin-os = "2.0.0-rc"
